--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script>
       window.intercomSettings = {
         api_base: "https://api-iam.intercom.io",
-        app_id: "x4t68r07",
+        app_id: "cjx0qmp1",
       }
     </script>
     
