--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script>
       window.intercomSettings = {
         api_base: "https://api-iam.intercom.io",
-        app_id: "cjx0qmp1",
+        app_id: "g9g2tez9",
       }
     </script>
     
@@ -51,6 +51,6 @@
       // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/mw2u5h8i'
       (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/mw2u5h8i';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(document.readyState==='complete'){l();}else if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
     </script>
-    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=fbd05087-db4d-4950-8919-f2697e4aa02ass"> </script>
+    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=47ffa047-319d-4764-b25e-d8af612030e9"> </script>
   </body>
 </html>
